--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  - title: "Github"
-    url: https://github.com/sksggg123
+#  - title: "Github"
+#    url: https://github.com/sksggg123
 #  - title: "About"
 #    url: https://mmistakes.github.io/minimal-mistakes/about/
 #  - title: "Sample Posts"
