--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: ruby
 #gemfile: docs/Gemfile
 #script:
 #  - bundle exec jekyll algolia --source docs --destination docs/_site --config docs/_config.yml
-branches:
-  only:
+#branches:
+#  only:
     # Change this to gh-pages if you're deploying using the gh-pages branch
-    - master
+#    - master
 rvm:
- - 2.4
+ - 2.2
  - jruby
